--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,21 +3,21 @@
 
 <head>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-    <title> CLMM.FUN - | CLZL | Chẳn Lẻ momo Uy Tín CLMM.FUN - Giao Dịch 24/7 - Thanh Toán 5s</title>
+    <title> MMCL.FUN - | MMCL | Chẳn Lẻ Momo Uy Tín MMCL.FUN - Giao Dịch 24/7 - Thanh Toán 5s</title>
     <link rel="icon" href="/logo.png" type="image/png">
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
-    <meta content="CLZL.WIN -  | CLZL |  Chẳn Lẻ ZaloPay Uy Tín  CLMM.FUN - Giao Dịch 24/7 - Thanh Toán 5s"
+    <meta content="MMCL.FUN -  | MMCL |  Chẳn Lẻ MOMO Uy Tín  MMCL.FUN - Giao Dịch 24/7 - Thanh Toán 5s"
           name="title">
-    <meta content="Chào mừng bạn đã đến với hệ thống game chẵn lẻ Zalopay TOP 1 Việt Nam.  CLMM.FUN cam kết chất lượng dịch vụ và độ uy tín luôn dẫn đầu thị trường."
+    <meta content="Chào mừng bạn đã đến với hệ thống game chẵn lẻ MOMO TOP 1 Việt Nam.  MMCL.FUN cam kết chất lượng dịch vụ và độ uy tín luôn dẫn đầu thị trường."
           name="description">
-    <meta content="ZALO, ZALOPAY, CHẴN LẺ ZALO. CHẴN LẺ ZALOPAY , clmm, clmm 1k, chanlemomo, clmm 5k,clmm, clmm 24/7, sever clmm, web clmm 1k"
+    <meta content=" MOMO, CHẴN LẺ MOMO. CHẴN LẺ MOMO , clmm, clmm 1k, chanlemomo, clmm 5k,clmm, clmm 24/7, sever clmm, web clmm 1k"
           name="keywords">
     <meta content="/" property="og:url" />
     <meta content="article" property="og:type" />
-    <meta content="CLZL.WIN -  | CLZL |  Chẳn Lẻ ZaloPay Uy Tín  CLMM.FUN - Giao Dịch 24/7 - Thanh Toán 5s"
+    <meta content="MMCL.FUN -  | MMCL |  Chẳn Lẻ MOMO Uy Tín  MMCL.FUN - Giao Dịch 24/7 - Thanh Toán 5s"
           property="og:title" />
-    <meta content="Chào mừng bạn đã đến với hệ thống game chẵn lẻ Zalopay TOP 1 Việt Nam. CLZL.WIN cam kết chất lượng dịch vụ và độ uy tín luôn dẫn đầu thị trường."
+    <meta content="Chào mừng bạn đã đến với hệ thống game chẵn lẻ MOMO TOP 1 Việt Nam. MMCL.FUN cam kết chất lượng dịch vụ và độ uy tín luôn dẫn đầu thị trường."
           property="og:description" />
 
 
